testsuite/tests/th/TH_NestedSplicesFail6.stderr
TH_NestedSplicesFail6.hs:4:10: error: [GHC-59185]
    • Template Haskell brackets cannot be nested (without intervening splices)
    • In the Template Haskell typed quotation: [|| 'g' ||]
      In the Template Haskell typed quotation: [|| [|| 'g' ||] ||]

